--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -105,10 +105,10 @@
 				       <div class="price-number">
 							<p><span class="rupees">COST : FREE</span></p>
 					    </div>
-						<br>
-						<div class="price-number">
+					
+						<!-- <div class="price-number">
 							<p><span class="rupees">{{user_filter.movie_release_date}}</span></p>
-					    </div>
+					    </div> -->
 					       		<div class="add-cart">								
 									<h4><a href="{% url 'mov_detail' user_filter.id %}">{{user_filter.movie_VJ}}</a></h4>
 							     </div>
@@ -143,7 +143,8 @@
 					 <h2><a href="{% url 'seri_detail' get_seriys.id %}">{{get_seriys.serie_title}}</a></h2>
 					<div class="price-details">
 				       <div class="price-number">
-							<p><span class="rupees">{{get_seriys.serie_cost}}</span></p>
+							<!-- <p><span class="rupees">{{get_seriys.serie_cost}}</span></p> -->
+							<p><span class="rupees">COST : FREE</span></p>
 					    </div>
 					       		<div class="add-cart">								
 									<h4><a href="{% url 'seri_detail' get_seriys.id %}">{{get_seriys.serie_VJ}}</a></h4>
