--- a/film/templates/search.html
+++ b/film/templates/search.html
@@ -46,9 +46,10 @@
                               <!-- <p><span class="rupees">{{user_filter.movie_cost}}</span></p> -->
 							  <p><span class="rupees">COST : FREE</span></p>
                           </div>
-                          <div class="price-number">
+						  <br>
+                          <!-- <div class="price-number">
                               <p><span class="rupees">{{user_filter.movie_release_date}}</span></p>
-                          </div>
+                          </div> -->
                                      <div class="add-cart">								
                                       <h4><a href="{% url 'mov_detail' user_filter.id %}">{{user_filter.movie_VJ}}</a></h4>
                                    </div>
