--- a/film/templates/base.html
+++ b/film/templates/base.html
@@ -25,7 +25,7 @@
 
 <style>
 	.btn-group .button {
-  background-color: #4CAF50; /* Green */
+  background-color: lightgrey; /* Dark orange */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -71,11 +71,13 @@
     <br>
     <div class="header_top">
         <div class="logo">
-            <a href="{% url 'movie' %}"><img src="{% static 'images/UkLogo1.png' %}" alt="" /></a>
+            <a href="{% url 'movie' %}"><img src="{% static 'images/ukmovies1.png' %}" alt="" /></a>
         </div>
+
             <div class="header_top_right">
               
               <div class="btn-group">
+                <button class="button"><a href="{% url 'sub_payment' %}">SUBSCRIBE</a></button>
                 <button class="button"><a href="{% url 'search_items' %}">MOVIES</a></button>
                 <button class="button"><a href="{% url 'search_serie_items' %}">SERIES</a></button>
                 <button class="button"><a href="#">ISLAM</a></button>
