--- a/film/templates/base.html
+++ b/film/templates/base.html
@@ -77,7 +77,7 @@
             <div class="header_top_right">
               
               <div class="btn-group">
-                <button class="button"><a href="{% url 'sub_payment' %}">SUBSCRIBE</a></button>
+                <!-- <button class="button"><a href="{% url 'sub_payment' %}">SUBSCRIBE</a></button> -->
                 <button class="button"><a href="{% url 'search_items' %}">MOVIES</a></button>
                 <button class="button"><a href="{% url 'search_serie_items' %}">SERIES</a></button>
                 <button class="button"><a href="#">ISLAM</a></button>
