--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -13,7 +13,7 @@
 					<div class="header_bottom_left">				
 						<div class="categories">
 						   <ul>
-						  	   <h3>Categories</h3>
+						  	   <h3>Genre</h3>
 								 {% for get_categorys in get_categorys %}
 								  <li><a href="{% url 'search_items' %}">{{get_categorys.category_name}}</a></li>
 							     
