--- a/film/templates/subscription.html
+++ b/film/templates/subscription.html
@@ -35,6 +35,13 @@
         <td>Paid</td>
         <td>1 Week</td>
        </tr>
+       <tr>
+        <td>03</td>
+        <td>Mariam</td>
+        <td>0704544125</td>
+        <td>Paid</td>
+        <td>1 Week</td>
+       </tr>
     </tbody>
   </table>
 </div>
