--- a/film/templates/subscription.html
+++ b/film/templates/subscription.html
@@ -42,6 +42,13 @@
         <td>Paid</td>
         <td>1 Week</td>
        </tr>
+       <tr>
+        <td>04</td>
+        <td>Nagadya</td>
+        <td>0758672021</td>
+        <td>Paid</td>
+        <td>1 Week</td>
+       </tr>
     </tbody>
   </table>
 </div>
