--- a/film/templates/subscription.html
+++ b/film/templates/subscription.html
@@ -49,6 +49,13 @@
         <td>Paid</td>
         <td>1 Week</td>
        </tr>
+       <tr>
+        <td>05</td>
+        <td>Acram</td>
+        <td>0782411217</td>
+        <td>Paid</td>
+        <td>1 Week</td>
+       </tr>
     </tbody>
   </table>
 </div>
